--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
   </head>
   <body>
     <div id="stars"></div>
-
     <div id="floating-container"></div>
 
     <div class="main-content">
       <h1 class="fade-in">Toca la pantalla...</h1>
     </div>
+
+    <audio
+      id="musica-fondo"
+      src="laVelocidadDeLaLuz.mp3"
+      loop
+      preload="auto"
+    ></audio>
 
     <script src="script.js"></script>
   </body>
