--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Para Ti</title>
+    <title>Para Mi Futura Esposa</title>
     <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&family=Pacifico&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -17,12 +17,14 @@
     <div class="main-content">
       <h1 class="fade-in">Toca la pantalla...</h1>
     </div>
+
     <div id="final-note" class="hidden">
       <div class="paper">
         <p>Juntos por siempre,</p>
         <h2>TE AMO ❤️</h2>
       </div>
     </div>
+
     <audio
       id="musica-fondo"
       src="laVelocidadDeLaLuz.mp3"
