--- a/index.html
+++ b/index.html
@@ -2,32 +2,41 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Para Ti</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>Para Mi Futura Esposa ❤️</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&family=Pacifico&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div id="stars"></div>
+
     <div id="floating-container"></div>
 
-    <div class="main-content">
-      <h1 class="fade-in">TE AMO 🐰</h1>
+    <div class="main-content" id="start-btn">
+      <h1 class="fade-in">Toca la pantalla... ✨</h1>
+      <p style="color: rgba(255, 255, 255, 0.6); font-size: 0.9rem">
+        (Para empezar la sorpresa)
+      </p>
     </div>
+
     <div id="final-note" class="hidden">
       <div class="paper">
         <p>Juntos por siempre,</p>
-        <h2>TE AMO ❤️</h2>
+        <h2>TE AMO ❤️ 🐰</h2>
       </div>
     </div>
+
     <audio
       id="musica-fondo"
       src="laVelocidadDeLaLuz.mp3"
-      loop
       preload="auto"
+      loop
     ></audio>
 
     <script src="script.js"></script>
