--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <title>Para Mi Futura Esposa ❤️</title>
+
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&family=Pacifico&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <div id="stars"></div>
-
     <div id="floating-container"></div>
 
     <div class="main-content" id="start-btn">
       <h1 class="fade-in">Toca la pantalla... ✨</h1>
-      <p style="color: rgba(255, 255, 255, 0.6); font-size: 0.9rem">
-        (Para empezar la sorpresa)
-      </p>
+      <p class="subtitle">(Para empezar la sorpresa)</p>
     </div>
 
     <div id="final-note" class="hidden">
