--- a/index.html
+++ b/index.html
@@ -2,41 +2,32 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <title>Para Mi Futura Esposa ❤️</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Para Ti</title>
+    <link rel="stylesheet" href="style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&family=Pacifico&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600&display=swap"
       rel="stylesheet"
     />
-
-    <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <div id="stars"></div>
     <div id="floating-container"></div>
 
-    <div class="main-content" id="start-btn">
-      <h1 class="fade-in">Toca la pantalla... ✨</h1>
-      <p class="subtitle">(Para empezar la sorpresa)</p>
+    <div class="main-content">
+      <h1 class="fade-in">Toca la pantalla...</h1>
     </div>
-
     <div id="final-note" class="hidden">
       <div class="paper">
         <p>Juntos por siempre,</p>
-        <h2>TE AMO ❤️ 🐰</h2>
+        <h2>TE AMO ❤️</h2>
       </div>
     </div>
-
     <audio
       id="musica-fondo"
       src="laVelocidadDeLaLuz.mp3"
-      preload="auto"
       loop
+      preload="auto"
     ></audio>
 
     <script src="script.js"></script>
