--- a/index.html
+++ b/index.html
@@ -12,24 +12,16 @@
   </head>
   <body>
     <div id="stars"></div>
+
     <div id="floating-container"></div>
 
     <div class="main-content">
       <h1 class="fade-in">Toca la pantalla...</h1>
     </div>
-    <div id="final-note" class="hidden">
-      <div class="paper">
-        <p>Juntos por siempre,</p>
-        <h2>TE AMO ❤️</h2>
-      </div>
-    </div>
-    <audio
-      id="musica-fondo"
-      src="laVelocidadDeLaLuz.mp3"
-      loop
-      preload="auto"
-    ></audio>
-
+    <audio id="musica-fondo" loop>
+      <source src="laVelocidadDeLaLuz.mp3" type="audio/mpeg" />
+      Tu navegador no soporta el audio.
+    </audio>
     <script src="script.js"></script>
   </body>
 </html>
