--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     <div class="main-content">
       <h1 class="fade-in">Toca la pantalla...</h1>
     </div>
+
+    <div id="final-note" class="hidden">
+      <div class="paper">
+        <p>Juntos por siempre,</p>
+        <h2>TE AMO ❤️</h2>
+      </div>
+    </div>
     <audio id="musica-fondo" loop>
       <source src="laVelocidadDeLaLuz.mp3" type="audio/mpeg" />
       Tu navegador no soporta el audio.
