--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="floating-container"></div>
 
     <div class="main-content">
-      <h1 class="fade-in">Toca la pantalla...</h1>
+      <h1 class="fade-in">Toca la pantalla para una sorpresa... 😏</h1>
     </div>
 
     <div id="final-note" class="hidden">
@@ -32,3 +32,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
